# Nexus-Engine

./: .gitignore  CMakeLists.txt
shaders/: shader.fs  shader.vs
src/: Application.cpp  Application.h  Camera2D.cpp  Camera2D.h  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  glad.c  main.cpp  shader.cpp  shader.h
src/include/glad/: glad.h
